--- a/src/variables.scss
+++ b/src/variables.scss
@@ -18,6 +18,7 @@ $min-desktop-pixels: 780px;
 
 $font-xlarge: calc(125% + 0.7vw);
 $font-large: calc(95% + 0.5vw);
-$font-medium: calc(85% + 0.3vw);
+$font-medium: calc(90% + 0.3vw);
+$font-mediumsmall: calc(80% + 0.3vw);
 $font-small: calc(55% + 0.5vw);
 $font-xsmall: calc(45% + 0.5vw);
